--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-editar-solicitud-pago/verdetalle-editar-solicitud-pago.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-editar-solicitud-pago/verdetalle-editar-solicitud-pago.component.scss
@@ -201,3 +201,21 @@ table td{
 .borber-table:not(:last-child) {
   border-bottom: solid 1px;
 }
+
+.h-3 {
+  height: 2.9em;
+  padding-top: 0.9em;
+  box-sizing: border-box;
+}
+
+.h-6 {
+  height: 6em;
+  padding-top: 2em;
+  box-sizing: border-box;
+}
+
+.h-9 {
+  height: 9em;
+  padding-top: 4em;
+  box-sizing: border-box;
+}
