--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-solicitud-pago/verdetalle-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-solicitud-pago/verdetalle-solicitud-pago.component.html
@@ -64,6 +64,9 @@
                               <div
                                 class="sub-item-table justify-content-center align-items-center"
                                 *ngFor="let el of element.listDyProyectos; let i = index"
+                                [class.h-3]="el.listDyUsos.length === 1"
+                                [class.h-6]="el.listDyUsos.length === 2"
+                                [class.h-9]="el.listDyUsos.length === 3"
                               >
                                 {{ el.nombre }}
                               </div>
