--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/form-autorizar-solicitud/form-autorizar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/form-autorizar-solicitud/form-autorizar-solicitud.component.html
@@ -58,26 +58,73 @@
                 <h2 class="card-subTitle">DRP</h2>
                 <div class="table-responsive">
                     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-                        <ng-container matColumnDef="drp">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> DRP </th>
-                            <td mat-cell *matCellDef="let element; index as i" align="center"> <b> {{ i + 1 }} </b> </td>
-                        </ng-container>
-                        <ng-container matColumnDef="numDrp">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Número DRP </th>
-                            <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroDRP }} </td>
-                        </ng-container>
-                        <ng-container matColumnDef="valor">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor </th>
-                            <td mat-cell *matCellDef="let element" align="center"> {{ element.valor }} </td>
-                        </ng-container>
-                        <ng-container matColumnDef="saldo">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo </th>
-                            <td mat-cell *matCellDef="let element" align="center"> {{ element.saldo }} </td>
-                        </ng-container>
-                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                      <ng-container matColumnDef="drp">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>DRP</th>
+                        <td mat-cell *matCellDef="let element" align="center">{{ element.enum }}</td>
+                      </ng-container>
+                      <ng-container matColumnDef="numDrp">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Número DRP</th>
+                        <td mat-cell *matCellDef="let element" align="center">{{ element.numeroDrp }}</td>
+                      </ng-container>
+                      <ng-container matColumnDef="ProyectoLLaveMen">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre proyecto</th>
+                        <td mat-cell *matCellDef="let element" style="padding: 0 !important">
+                          <div
+                            class="sub-item-table justify-content-center align-items-center"
+                            *ngFor="let el of element.listDyProyectos; let i = index"
+                            [class.h-3]="el.listDyUsos.length === 1"
+                            [class.h-6]="el.listDyUsos.length === 2"
+                            [class.h-9]="el.listDyUsos.length === 3"
+                          >
+                            {{ el.nombre }}
+                          </div>
+                        </td>
+                      </ng-container>
+                      <ng-container matColumnDef="NombreUso">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre uso</th>
+                        <td mat-cell *matCellDef="let element" style="padding: 0 !important">
+                          <div
+                            class="sub-item-table justify-content-center align-items-center"
+                            *ngFor="let el of element.listDyProyectos; let i = index"
+                          >
+                            <div *ngFor="let el2 of el.listDyUsos; let j = index" class="borber-table">
+                              <div class="sub-item-table--element">
+                                {{ el2.nombre }}
+                              </div>
+                            </div>
+                          </div>
+                        </td>
+                      </ng-container>
+                      <ng-container matColumnDef="valor">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Valor</th>
+                        <td mat-cell *matCellDef="let element" style="padding: 0 !important">
+                          <div
+                            class="sub-item-table justify-content-center align-items-center"
+                            *ngFor="let el of element.listDyProyectos; let i = index"
+                          >
+                            <div *ngFor="let el2 of el.listDyUsos; let j = index" class="borber-table">
+                              <div class="sub-item-table--element">${{ el2.valorUso }}</div>
+                            </div>
+                          </div>
+                        </td>
+                      </ng-container>
+                      <ng-container matColumnDef="saldo">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Saldo</th>
+                        <td mat-cell *matCellDef="let element" style="padding: 0 !important">
+                          <div
+                            class="sub-item-table justify-content-center align-items-center"
+                            *ngFor="let el of element.listDyProyectos; let i = index"
+                          >
+                            <div *ngFor="let el2 of el.listDyUsos; let j = index" class="borber-table">
+                              <div class="sub-item-table--element">${{ el2.saldo }}</div>
+                            </div>
+                          </div>
+                        </td>
+                      </ng-container>
+                      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
                     </table>
-                </div>
+                  </div>
                 <div class="tabs--actions" style="margin-top: 1em;">
                     <button mat-raised-button color="accent" class="tabs--btn auxBtn"
                         (click)="openProyectosAsociados()">
