--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/ver-detalle-autorizar-solicitud/ver-detalle-autorizar-solicitud.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/ver-detalle-autorizar-solicitud/ver-detalle-autorizar-solicitud.component.scss
@@ -188,3 +188,38 @@ table td{
 .supportBlack{
     color: #474747;
 }
+
+.sub-item-table {
+  display: block;
+  &:not(:first-child) {
+      border-top: solid 1px  #474747;
+  }
+
+  &--element {
+    height: 3em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+.borber-table:not(:last-child) {
+  border-bottom: solid 1px;
+}
+
+.h-3 {
+  height: 2.9em;
+  padding-top: 0.9em;
+  box-sizing: border-box;
+}
+
+.h-6 {
+  height: 6em;
+  padding-top: 2em;
+  box-sizing: border-box;
+}
+
+.h-9 {
+  height: 9em;
+  padding-top: 4em;
+  box-sizing: border-box;
+}
