Detalle fuente - DDP especial

--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/con-validacion-presupuestal/con-validacion-presupuestal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/con-validacion-presupuestal/con-validacion-presupuestal.component.html
@@ -139,7 +139,8 @@
             {{ detailavailabilityBudget?.urlConSoporte }}
           </p>
           <mat-card-title class="header-card--text sub-text"> Fuente </mat-card-title>
-          <div *ngIf="detailavailabilityBudget?.tipoSolicitudCodigo != pTipoDDP.DDP_especial">
+          <!--*ngIf="detailavailabilityBudget?.tipoSolicitudCodigo != pTipoDDP.DDP_especial"-->
+          <div>
             <div *ngFor="let fuente of aportante.fuentesFinanciacion; index as ii">
               <p>
                 <strong>Fuente {{ ii + 1 }}:</strong>
