--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-descuentos-og-gbftrec/tabla-descuentos-og-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-descuentos-og-gbftrec/tabla-descuentos-og-gbftrec.component.html
@@ -1,30 +1,65 @@
 <div class="table-responsive">
-    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-        <ng-container matColumnDef="aportante">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Aportante </th>
-            <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.aportante }}</b> </td>
-        </ng-container>
-        <ng-container matColumnDef="conceptoPago">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Concepto de pago </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.conceptoPago }} </td>
-        </ng-container>
-        <ng-container matColumnDef="ansAplicado">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> ANS aplicado </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.ansAplicado }} </td>
-        </ng-container>
-        <ng-container matColumnDef="retegarantiaPagar">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Retegarantía a pagar </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.retegarantiaPagar }} </td>
-        </ng-container>
-        <ng-container matColumnDef="otrosDescuentos">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Otros descuentos </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.otrosDescuentos }} </td>
-        </ng-container>
-        <ng-container matColumnDef="valorTotalDescuentos">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor total descuentos </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.valorTotalDescuentos }} </td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+    <ng-container matColumnDef="aportante">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Aportante</th>
+      <td mat-cell *matCellDef="let element" align="center" style="padding: 0 !important">
+        <div
+          class="sub-item-table flex-table justify-content-center align-items-center h-3em"
+          *ngFor="let el of element.listDyAportante"
+        >
+          <b>{{ el.aportante }}</b>
+        </div>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="conceptoPago">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Concepto de pago</th>
+      <td mat-cell *matCellDef="let element" align="center">{{ element.conceptoPago }}</td>
+    </ng-container>
+    <ng-container matColumnDef="ansAplicado">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>ANS aplicado</th>
+      <td mat-cell *matCellDef="let element" align="center" style="padding: 0 !important">
+        <div
+          class="sub-item-table flex-table justify-content-center align-items-center h-3em"
+          *ngFor="let el of element.listDyAportante"
+        >
+          {{ el.ansAplicado | currency: '':'symbol-narrow':'.0-0' }}
+        </div>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="retegarantiaPagar">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Retegarantía a pagar</th>
+      <td mat-cell *matCellDef="let element" align="center" style="padding: 0 !important">
+        <div
+          class="sub-item-table flex-table justify-content-center align-items-center h-3em"
+          *ngFor="let el of element.listDyAportante"
+        >
+          {{ el.reteGarantia | currency: '':'symbol-narrow':'.0-0' }}
+        </div>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="otrosDescuentos">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Otros descuentos</th>
+      <td mat-cell *matCellDef="let element" align="center" style="padding: 0 !important">
+        <div
+          class="sub-item-table flex-table justify-content-center align-items-center h-3em"
+          *ngFor="let el of element.listDyAportante"
+        >
+          {{ el.otrosDescuentos | currency: '':'symbol-narrow':'.0-0' }}
+        </div>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="valorTotalDescuentos">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Valor total descuentos</th>
+      <td mat-cell *matCellDef="let element" align="center" style="padding: 0 !important">
+        <div
+          class="sub-item-table flex-table justify-content-center align-items-center h-3em"
+          *ngFor="let el of element.listDyAportante"
+        >
+          {{ el.valorTotalDescuento | currency: '':'symbol-narrow':'.0-0' }}
+        </div>
+      </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
 </div>
