--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-otros-descuentos-og-gbftrec/tabla-otros-descuentos-og-gbftrec.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-otros-descuentos-og-gbftrec/tabla-otros-descuentos-og-gbftrec.component.scss
@@ -104,3 +104,24 @@ table td{
     font-size: 12px;
     font-weight: 500;
 }
+
+
+.linea-faltante:not(:first-child) {
+    border-top: solid 1px #474747;
+}
+
+.h-3 {
+    height: 2.9em;
+    box-sizing: border-box;
+}
+
+.h-6 {
+    height: 6em;
+    box-sizing: border-box;
+}
+
+.h-9 {
+    height: 9em;
+    padding-top: 4em;
+    box-sizing: border-box;
+}
