--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-valor-total-og-gbftrec/tabla-valor-total-og-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-valor-total-og-gbftrec/tabla-valor-total-og-gbftrec.component.html
@@ -31,12 +31,12 @@
         <ng-container matColumnDef="gestion">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
             <td mat-cell *matCellDef="let element" align="center">
-                <button mat-raised-button
+                <a mat-raised-button
                         color="accent"
                         class="btn-table"
-                        [routerLink]="[ '/gestionarBalanceFinancieroTrasladoRecursos/detalleOrdengiro', element.solicitudId ]">
+                        [routerLink]="[ 'detalleOrdengiro', element.solicitudId ]">
                         Ver detalle
-                </button>
+                </a>
             </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
