--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/ver-detalle-ddp-especial/ver-detalle-ddp-especial.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/ver-detalle-ddp-especial/ver-detalle-ddp-especial.component.html
@@ -96,7 +96,7 @@
                 </p>
                 <p>
                     <b>Valor:</b>
-                    {{disponibilidadPresupuestal.valorSolicitud}}
+                    {{disponibilidadPresupuestal.valorSolicitud | currency: 'COP':'symbol-narrow':'.0-0'}}
                 </p>
             </mat-card-content>
         </mat-card>
@@ -143,7 +143,7 @@
                 </p>
                 <p>
                     <b>Valor:</b>
-                   {{ disponibilidadPresupuestal.valorAportante | currency:' ':'symbol-narrow':'.0-0' }}
+                   {{ disponibilidadPresupuestal.valorAportante | currency:'COP':'symbol-narrow':'.0-0' }}
                 </p>
             </mat-card-content>
         </mat-card>
