--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/validacion-presupuestal/validacion-presupuestal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/validacion-presupuestal/validacion-presupuestal.component.html
@@ -132,7 +132,7 @@
                     </p>
                     <p>
                         <strong>Valor del aportante al proyecto:</strong>
-                        $ {{aportante.valorAportanteAlProyecto}}
+                        {{aportante.valorAportanteAlProyecto | currency: 'COP':'symbol-narrow':'.0-0'}}
                     </p>
                     <p *ngIf="detailavailabilityBudget?.urlConSoporte">
                         <strong>URL con soporte:</strong>
